fixed nav and card spacing

--- a/src/.vuepress/styles/styleguide/components/_card.scss
+++ b/src/.vuepress/styles/styleguide/components/_card.scss
@@ -1,6 +1,7 @@
 .c-card {
   height: 100%;
-  border: 1px solid $gray-100;
+  border: 1px solid #c4c4c4;
+  margin-bottom: 1rem;
 
   .img-wrap {
     background: rgba(216, 216, 216, 0.3);
@@ -17,11 +18,18 @@
 
   .card-body {
     padding: 1rem 1.5rem 1.5rem 1.5rem;
+    display: flex;
+    flex-direction: column;
   }
 
   .h4 {
     padding: 0;
     margin-bottom: 1.5rem;
+  }
+
+  .text {
+    margin-bottom: 1.5rem;
+    flex-grow: 1;
   }
 
   a {
@@ -46,8 +54,6 @@
   }
 
   &--compact {
-    border: 1px solid #c4c4c4;
-
     .card-body {
       padding: 1.5rem;
     }
