--- a/src/.vuepress/styles/styleguide/components/_cards.scss
+++ b/src/.vuepress/styles/styleguide/components/_cards.scss
@@ -1,13 +1,3 @@
 .c-cards {
-  margin-bottom: $component-spacing;
-
-  .card-body {
-    display: flex;
-    flex-direction: column;
-  }
-
-  .text {
-    margin-bottom: 1.5rem;
-    flex-grow: 1;
-  }
+  margin-bottom: calc(#{$component-spacing} - 1rem);
 }
